2019-07-30  ready for release