@@ -1,1 +1,2 @@
+2019-07-30 NEW FEATURE: only keep 7 most recent log files
 2019-07-30  ready for release
